pages/cloudflare/former-releases/0.2/bindings.mdx
import { Callout } from "nextra/components";

### 绑定

[绑定](https://developers.cloudflare.com/workers/runtime-apis/bindings/) 允许您的 Worker 与 Cloudflare 开发者平台上的资源进行交互。当您在 Worker 上声明绑定时，您就授予了它特定的能力，例如能够读取和写入文件到 [R2](https://developers.cloudflare.com/r2/) 存储桶。

#### 如何配置您的 Next.js 应用以便它可以访问绑定

安装 [@opennextjs/cloudflare](https://www.npmjs.com/package/@opennextjs/cloudflare)，然后在您的 Next.js 应用的根目录中添加一个 `wrangler.toml` 文件，如 [入门指南](/cloudflare/get-started) 中所述。

#### 如何在您的 Next.js 应用中访问绑定

您可以通过 `getCloudflareContext` 从 Next.js 应用的任何路由访问 [绑定](https://developers.cloudflare.com/workers/runtime-apis/bindings/)：

```js
import { getCloudflareContext } from "@opennextjs/cloudflare";

export async function GET(request) {
  let responseText = "Hello World";

  const myKv = (await getCloudflareContext()).env.MY_KV_NAMESPACE;
  await myKv.put("foo", "bar");
  const foo = await myKv.get("foo");

  return new Response(foo);
}
```

#### 如何向您的 Worker 添加绑定

通过[将它们添加到您的 `wrangler.toml` 配置文件](https://developers.cloudflare.com/workers/wrangler/configuration/) 来向您的 Worker 添加绑定。

## 绑定的 TypeScript 类型声明

为了确保上述 `(await getCloudflareContext()).env` 中的 `env` 对象具有准确的 TypeScript 类型，请运行以下 Wrangler 命令来 [生成与您 Worker 配置匹配的类型](https://developers.cloudflare.com/workers/languages/typescript/#generate-types-that-match-your-workers-configuration-experimental)：

```
npx wrangler types --experimental-include-runtime
```

这将生成一个 `d.ts` 文件并（默认情况下）将其保存到 `.wrangler/types/runtime.d.ts`。您将在命令的输出中被提示将该文件添加到您的 `tsconfig.json` 的 `compilerOptions.types` 数组中。

如果您希望将该文件提交到 git，您可以提供一个自定义路径。例如，此处 `runtime.d.ts` 文件将被保存到项目的根目录：

```bash
npx wrangler types --experimental-include-runtime="./runtime.d.ts"
```

为了确保您的类型始终是最新的，请确保在对配置文件进行任何更改后运行 `wrangler types --experimental-include-runtime`。

## 其他 Cloudflare API（`cf`, `ctx`）

您可以从 [`cf` 对象](https://developers.cloudflare.com/workers/runtime-apis/request/#the-cf-property-requestinitcfproperties) 访问有关传入请求的上下文，以及从 [`getCloudflareContext()`](https://github.com/opennextjs/opennextjs-cloudflare/blob/main/packages/cloudflare/src/api/get-cloudflare-context.ts) 的返回值中的 [`ctx` 对象](https://developers.cloudflare.com/workers/runtime-apis/context) 访问生命周期方法：

```js
import { getCloudflareContext } from "@opennextjs/cloudflare";

export async function GET(request) {
  const { env, cf, ctx } = await getCloudflareContext();

  // ...
}
```
